Gradle edits for testing